UPDATE: small improvements

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">ScoreCounter</string>
+    <string name="app_name">Tennis Score Counter</string>
 
 
 <!--  TENNIS  -->
